# husky_manipulation

husky_ur5_3fgripper_gazebo/: CMakeLists.txt  README.md  package.xml
husky_ur5_3fgripper_gazebo/config/: control_ur5.yaml
husky_ur5_3fgripper_gazebo/launch/: amcl_demo.launch  robot_gazebo.launch  robot_playpen.launch  spawn_robot.launch
husky_ur5_3fgripper_gazebo/scripts/: close_3fgripper  open_3fgripper  stow_ur5
husky_ur5_3fgripper_gazebo/worlds/: clearpath_playpen_no_ground.world
husky_ur5_3fgripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_ur5_3fgripper_moveit_config/config/: fake_controllers.yaml  husky.srdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
husky_ur5_3fgripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_moveit_controller_manager.launch.xml  husky_ur5_gripper_moveit_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
husky_ur_description/: package.xml
husky_ur_description/urdf/: husky_ur5_3fgripper_description.urdf.xacro
husky_ur_moveit_config/launch/: husky_ur_moveit_planning_execution.launch
